<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000">

    <RelativeLayout
        android:background="@drawable/bg2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="70dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="75dp"
            android:background="@drawable/logoku" />

        <TextView
            android:id="@+id/tvsilahkan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgLogo"
            android:layout_marginBottom="80dp"
            android:text="@string/silahkan_login_terlebih_dahulu"
            android:textAlignment="center"
            android:textColor="#9C27B0"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_below="@+id/tvsilahkan"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:autofillHints="username"
            android:drawableStart="@drawable/ic_username"
            android:drawablePadding="5dp"
            android:hint="@string/hint_username"
            android:inputType="textPersonName"
            android:textColorHint="#15111C"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etUsername"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/fab_margin"
            android:autofillHints="password"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="5dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="#15111C"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:background="@drawable/signin"
            android:text="@string/sign_in" />

        <TextView
            android:id="@+id/tvCreate"
            android:textColor="#15111C"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_below="@+id/btnLogin"
            android:text="@string/create_a_new_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </RelativeLayout>

</LinearLayout>
